tests/paczka2/big_fuzzy/89140695.err
Error in line 9: OFr6Ip3R A43 29,6
Error in line 15: OFr6Ip3R A801 29,5
Error in line 30: K3cJKgyHb A43 7,1
Error in line 41: Abf7t S19 17,9
Error in line 47: ODngJ6u S19 1ü,9
Error in line 43: OFr6Ip3R A801 90,3
Error in line 49: OFr6Ip3R A199 23,0
Error in line 51: S19 A43 1,1
Error in line 48: K3cJKgyHb A43 47,4
Error in line 63: 0FKOruCV A801 32,9
Error in line 59: Abf7t S19 59,6
Error in line 52: OFr6Ip3R A801 12,6
Error in line 73: ODngJ6u S19 114,8
Error in line 76: bf7t 199 58,0
Error in line 68: 0FKOruCV S19 46,5
Error in line 80: 0FKOruCV A199 21,1
Error in line 84: XDL5HWYRSZ A199 0,4
Error in line 82: 0FKOruCV A801 87,7
Error in line 69: Abf7t A199 30,7
Error in line 92: 0FKOruCV S19 57,2
Error in line 85: OFr6Ip3R S19 70,3
Error in line 95: Abf7t S19 50,5
Error in line 105: ODngJ6u A801 YY,7
Error in line 106: XDL5HWYRSZ A801 86,6
Error in line 104: ODngJ6u S19 24,3
Error in line 94: S19 A199 151,2
Error in line 103: Abf7t A199 28,3
Error in line 115: 0FKOruCV A801 108,0
Error in line 109: ODngJ6u A801 146,6
Error in line 120: Abf7t A43 93,0
Error in line 123: ODngJ6u A43 34,1
Error in line 137: XDL5HWYRSZ S19 23,5
Error in line 139: Abf7t A199 116,4
Error in line 157: 0FKOruCV A199 67,7
Error in line 159: 0FKOruCV S19 73,3
Error in line 165: ODngJ6u A801 57,2
Error in line 169: ODngJ6u A199 2,5
Error in line 161: XDL5HWYRSZ A199 381,3
Error in line 184: S19 A801 41,91
Error in line 183: S19 A801 16,5
Error in line 189: XDL5HWYRSZ A801 21,0
Error in line 194: OFr6Ip3R A43 51,8
Error in line 192: XDL5HWYRSZ A199 94,2
Error in line 198: XDL5HWYRSZ S19 68,5
Error in line 196: OFr6Ip3R A199 28,9
Error in line 202: OFr6Ip3R S19 63,2
Error in line 200: XDL5HWYRSZ A801 35,0
Error in line 226: XDL5HWYRSZ A801 72,6
Error in line 227: Abf7t A199 65,6
Error in line 234: Abf7t S19 78,9
Error in line 247: S19 A199 31,7
Error in line 248: S19 S19 69,3
